v1.1.0/modules/schema/pages/class/Diagram.adoc
= `Diagram`
:toclevels: 4


+++The diagram being exchanged. The coordinate system is a standard Cartesian coordinate system and the orientation attribute defines the orientation. The initial view related attributes can be used to specify an initial view with the x,y coordinates of the diagonal points.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Diagram`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Diagram`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<DiagramElements,`DiagramElements`>>
//| [[slots_table.DiagramElements]]<<DiagramElements,`DiagramElements`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++A diagram is made up of multiple diagram objects.+++
| _n/a_

| <<DiagramStyle,`DiagramStyle`>>
//| [[slots_table.DiagramStyle]]<<DiagramStyle,`DiagramStyle`>>
| 0..1 +
xref::class/DiagramStyle.adoc[`DiagramStyle`]
| +++A Diagram may have a DiagramStyle.+++
| _n/a_

| <<orientation,`orientation`>>
//| [[slots_table.orientation]]<<orientation,`orientation`>>
| 0..1 +
xref::enumeration/OrientationKind.adoc[`OrientationKind`]
| +++Coordinate system orientation of the diagram. A positive orientation gives standard “right-hand” orientation, with negative...+++
| _n/a_

| <<x1InitialView,`x1InitialView`>>
//| [[slots_table.x1InitialView]]<<x1InitialView,`x1InitialView`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++X coordinate of the first corner of the initial view.+++
| _n/a_

| <<x2InitialView,`x2InitialView`>>
//| [[slots_table.x2InitialView]]<<x2InitialView,`x2InitialView`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++X coordinate of the second corner of the initial view.+++
| _n/a_

| <<y1InitialView,`y1InitialView`>>
//| [[slots_table.y1InitialView]]<<y1InitialView,`y1InitialView`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Y coordinate of the first corner of the initial view.+++
| _n/a_

| <<y2InitialView,`y2InitialView`>>
//| [[slots_table.y2InitialView]]<<y2InitialView,`y2InitialView`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Y coordinate of the second corner of the initial view.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramElements]
=== `DiagramElements`
+++A diagram is made up of multiple diagram objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Diagram.DiagramElements`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramElements,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#DiagramStyle]
=== `DiagramStyle`
+++A Diagram may have a DiagramStyle.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Diagram.DiagramStyle`
| Cardinality
| 0..1
| Type
| xref::class/DiagramStyle.adoc[`DiagramStyle`]


|===

////
[.text-left]
--
<<slots_table.DiagramStyle,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#orientation]
=== `orientation`
+++Coordinate system orientation of the diagram. A positive orientation gives standard “right-hand” orientation, with negative orientation indicating a “left-hand” orientation. For 2D diagrams, a positive orientation will result in X values increasing from left to right and Y values increasing from bottom to top. A negative orientation gives the “left-hand” orientation (favoured by computer graphics displays) with X values increasing from left to right and Y values increasing from top to bottom.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Diagram.orientation`
| Cardinality
| 0..1
| Type
| xref::enumeration/OrientationKind.adoc[`OrientationKind`]


|===

////
[.text-left]
--
<<slots_table.orientation,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#x1InitialView]
=== `x1InitialView`
+++X coordinate of the first corner of the initial view.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Diagram.x1InitialView`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.x1InitialView,&#10548;>>
--
////


//[discrete]
[#x2InitialView]
=== `x2InitialView`
+++X coordinate of the second corner of the initial view.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Diagram.x2InitialView`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.x2InitialView,&#10548;>>
--
////


//[discrete]
[#y1InitialView]
=== `y1InitialView`
+++Y coordinate of the first corner of the initial view.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Diagram.y1InitialView`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.y1InitialView,&#10548;>>
--
////


//[discrete]
[#y2InitialView]
=== `y2InitialView`
+++Y coordinate of the second corner of the initial view.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Diagram.y2InitialView`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.y2InitialView,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/DiagramObject.adoc[`DiagramObject`] | xref::class/DiagramObject.adoc#Diagram[`Diagram`]



| xref::class/DiagramStyle.adoc[`DiagramStyle`] | xref::class/DiagramStyle.adoc#Diagram[`Diagram`]


|===

